@@ -3,6 +3,8 @@ package io.breland.bbagent.server.agent.transport.lxmf;
 import java.util.LinkedHashMap;
 import java.util.Map;
 import lombok.extern.slf4j.Slf4j;
+import org.apache.commons.codec.digest.DigestUtils;
+import org.apache.commons.lang3.StringUtils;
 import org.springframework.beans.factory.annotation.Value;
 import org.springframework.http.MediaType;
 import org.springframework.stereotype.Component;
@@ -23,15 +25,17 @@ public class LxmfBridgeClient {
   }
 
   public boolean sendText(String destinationHash, String content) {
-    log.info("Sending message to Lxmf bridge {}: {}", destinationHash, content);
-    if (destinationHash == null || destinationHash.isBlank()) {
+    if (StringUtils.isBlank(destinationHash)) {
       log.warn("Cannot send LXMF message without destination hash");
       return false;
     }
-    if (content == null || content.isBlank()) {
+    if (StringUtils.isBlank(content)) {
       log.warn("Cannot send blank LXMF message");
       return false;
     }
+    String destinationHashFingerprint = fingerprint(destinationHash);
+    log.info(
+        "Sending message to LXMF bridge destinationHashFingerprint={}", destinationHashFingerprint);
     Map<String, Object> request = new LinkedHashMap<>();
     request.put("destination_hash", destinationHash);
     request.put("content", content);
@@ -46,8 +50,15 @@ public class LxmfBridgeClient {
           .toBodilessEntity();
       return true;
     } catch (Exception e) {
-      log.warn("Failed to send LXMF message to {}", destinationHash, e);
+      log.warn(
+          "Failed to send LXMF message destinationHashFingerprint={}",
+          destinationHashFingerprint,
+          e);
       return false;
     }
+  }
+
+  private static String fingerprint(String value) {
+    return StringUtils.truncate(DigestUtils.sha256Hex(StringUtils.defaultString(value)), 12);
   }
 }
